--- a/index.html
+++ b/index.html
@@ -16,3 +16,8 @@
      </h3>
      <p>
        After the fall of our god the soviet union the dirty capitalist rose. They are all retarded but our lords Trump and Putin will stop this. After the rise of capitalism there was a secret underground cult of the top capitalist. They are known as the lizard people, the lizard people are horrible people requiring their greed to stay human. If the Lizard people do not have oney or greed their human shell will fall out and they will be lizards. But there also rose a communist group that arose in North Korea and Mothr Russsia. The communist group fights all the capitalists from America and the EU. This is why we must fight the capitalists and have a 3rd world war to fight for human rights..communist rights. I hope that all of you will join the communists in the fight against capitalism.
+     <h3>THe eveil capitalist in lizard people</h3>
+     <ul>
+       <li>Hillary Clinton</ul>
+     <li> Barack Obama</li>
+     <li>
