--- a/index.html
+++ b/index.html
@@ -20,4 +20,14 @@
      <ul>
        <li>Hillary Clinton</ul>
      <li> Barack Obama</li>
-     <li>
+     <li>JEb BUsh</li>
+     
+     </ul>
+  
+     <h3> The great communist men</h3>
+     <ul>
+       <li>George Orwell</li>
+       <li>Donald trump</li>
+       <li>Vkadimir Putin</li>
+       <li> KArl MArx</li>
+  </ul>
