--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </style>
     </head>
    <body>
-     <img src="hammer3.png" class="background">
+     <img src="Hammer3.png" class="background">
      <h2>
        Communism shall rise!!!11
        </h2>
