--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
         </style>
     </head>
    <body>
-     <img src="Hammer3.png" class="background">
-     <h2>
+     <span><img src="Hammer3.png" class="background">     <h2>
        Communism shall rise!!!11
        </h2>
      <h3>
@@ -34,3 +33,6 @@
        <li>Vkadimir Putin</li>
        <li> KArl MArx</li>
   </ul>
+     </span>
+    </body>
+</html>
