--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="utf-8">
         <title>Why Capitalism is bad</title>
         <style>
-          .background{
-            width: 100%;
+          body{
+           background-image: url("hammer3.png") 
           }
         </style>
     </head>
-   <body>
-     <span><img src="Hammer3.png" class="background">     <h2>
+   <body> 
+     <h2>
        Communism shall rise!!!11
        </h2>
      <h3>
@@ -33,6 +33,5 @@
        <li>Vkadimir Putin</li>
        <li> KArl MArx</li>
   </ul>
-     </span>
     </body>
 </html>
