--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
         <meta charset="utf-8">
         <title>Why Capitalism is bad</title>
         <style>
-          body{
-           background-image: url("hammer3.png") 
-          }
+          
         </style>
     </head>
-   <body> 
+   <body background="hammer3.png"> 
      <h2>
        Communism shall rise!!!11
        </h2>
