--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <meta charset="utf-8">
         <title>Why Capitalism is bad</title>
         <style>
-          
+          body{
+           background-image: url("hammer3.png"); 
+          }
         </style>
     </head>
    <body background="hammer3.png"> 
