--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>Why Capitalism is bad</title>
         <style>
           body{
-           background-image: url("hammer3.png"); 
+           background-image: url("Hammer3.png");
+           background-color: #cccccc; 
           }
         </style>
     </head>
