--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
        <li>Hillary Clinton</li>
      <li> Barack Obama</li>
      <li>JEb BUsh</li>
+       <li> nihil buhtnigar</li>
+       <li> coll kidz nibik</li>
      
      </ul>
   
      <h3> The great communist men</h3>
      <ul>
+       <li>Mrinal YAdav</li>
        <li>George Orwell</li>
        <li>Donald trump</li>
        <li>Vkadimir Putin</li>
