--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
            background-image: url("Hammer3.png");
            background-color: #cccccc; 
           }
+          h2 {text-align:center;}
+p {text-align:center;}
         </style>
     </head>
    <body background="hammer3.png"> 
